--- a/sonar-project.properties.go.example
+++ b/sonar-project.properties.go.example
@@ -7,3 +7,4 @@ sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
+sonar.externalIssuesReportPaths=gosec.json
