--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
     # Required
     - OS=linux
     - COMPONENT_TAG_EXTENSION="-${TRAVIS_COMMIT}"
+    - BUILD_HARNESS_EXTENSIONS_BRANCH=pipeline-refactor
 
     # Component Specific
     - COMPONENT_DEPLOY_COMMAND=${TRAVIS_BUILD_DIR}/deploy-to-cluster.sh
