--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
     - OS=linux
     - COMPONENT_TAG_EXTENSION="-${TRAVIS_COMMIT}"
     - BUILD_HARNESS_EXTENSIONS_BRANCH=git-tag
+    - PIPELINE_MANIFEST_RETAG_BRANCH=quay-retag-test
 
     # Component Specific
     - COMPONENT_DEPLOY_COMMAND=${TRAVIS_BUILD_DIR}/deploy-to-cluster.sh
