--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 #
-# Sample .travis.yml using the mvp-helloworld image (a helmoperator)
+# Sample .travis.yml using the helloworld image (a helmoperator)
 #
 os:
   - linux
